--- a/App/Catnip/mobile/src/main/AndroidManifest.xml
+++ b/App/Catnip/mobile/src/main/AndroidManifest.xml
@@ -2,14 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs160.joleary.catnip">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COURSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="com.cs160.joleary.catnip.AppController">
         <activity
             android:name=".FindMyRepHome"
-            android:label="@string/app_name">
+            android:label="FindMyRep">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,11 +35,27 @@
 
         <activity
             android:name=".CandidatesActivity"
-            android:label="Candidates" />
+            android:label="Representatives" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".DetailsActivity"
+            android:label="Details"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".LocationActivity"
+            android:label="Location"></activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="Maps"></activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="eb21017f26cd5218d3cd2abe40d848ab04094287" />
     </application>
 
 </manifest>
-
-    <!--android:label="@string/title_activity_find_my_rep_home"-->
